<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EB2C2C2C"
    tools:context=".ListMain">

    <ListView
        android:id="@+id/listViewId1"
        android:layout_width="300dp"
        android:layout_height="460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <ListView
        android:id="@+id/listViewId2"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toStartOf="@+id/listViewId3"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <ListView
        android:id="@+id/listViewId3"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <TextView
        android:id="@+id/textViewL1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonL1"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#0067B8"
        android:text="@string/list_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewId1"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/buttonL2"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#0067B8"
        android:text="@string/list_button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewId1"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>